# surgen-mil

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  api.py  env.example  pyproject.toml  requirements-core.txt  requirements.txt  train.py
configs/: appendix_attention_focal.yaml  appendix_instance_mean.yaml  appendix_mean_unweighted.yaml  appendix_topk_attention.yaml  paper_reproduction.yaml  paper_reproduction_fair.yaml  uni_attention.yaml  uni_attention_bce_focal_curriculum.yaml  uni_attention_bce_focal_normalized.yaml  uni_attention_fair.yaml  uni_attention_focal.yaml  uni_attention_focal_hybrid.yaml  uni_attention_spatial_fair.yaml  uni_gated_attention.yaml  uni_hybrid_attention_mean2.yaml  uni_hybrid_attention_spatial_mean2.yaml  uni_instance_mean.yaml  uni_lse_tau05.yaml  uni_lse_tau10.yaml  uni_lse_tau20.yaml  uni_mean.yaml  uni_mean_bce_focal.yaml  uni_mean_fair.yaml  uni_mean_focal.yaml  uni_mean_unweighted.yaml  uni_mean_var.yaml  uni_region_attention_16.yaml  uni_region_attention_8.yaml  uni_topk_attention_k16.yaml  uni_topk_attention_k32.yaml  uni_topk_attention_k4.yaml  uni_topk_attention_k8.yaml  uni_transformer_spatial_fair.yaml
docs/: appendix.md  architecture_configs.md  attention_visualization.md  data_format.md  future_work.md  packaging_and_deployment.md  project_overview.md  reproducibility.md  results_summary.md
examples/: expected_outputs.md  sample_config_overrides.yaml  sample_manifest.csv
outputs/: appendix_tables.csv
scripts/: analyse.py  appendix_tables.py  compare_models.py  compare_multisplit.py  evaluate.py  (+25 more)
(+179 files in other folders)
