[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "surgen-mil"
version = "0.1.0"
description = "Modular MIL framework for slide-level MSI/MMR prediction from precomputed UNI patch embeddings on the SurGen colorectal cancer dataset."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
